# miniS3

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/minis3/: object_store.h
src/hello_world/: CMakeLists.txt  main.cpp
src/hello_world/tests/: test_version.cpp
src/s3store/: CMakeLists.txt  in_memory_store.cpp  in_memory_store.h  main.cpp
